--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,8 +4,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
+
+/* прижать футер к низу */
+html, body, .wrapper {
+    height: 100%;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
+}
+/* прижать футер к низу */
 
 a {
     text-decoration: none;
@@ -18,88 +32,12 @@ a {
 
 /* INDEX PAGE */
 
-header {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: solid 4px black;
+.header-container {
+    text-align: center;
 }
 
-header h1 {
+.main-title {
+    display: block;
     font-family: "Bebas Neue", sans-serif;
     font-size: 64px;
-    text-align: center;
-}
-
-
-.artist-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.artist-card {
-    width: 175px;
-    border: solid 2px black;
-}
-
-.artist-card-banner {
-    width: 172px;
-    border-bottom: solid 2px black;
-}
-
-.artist-card-name {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 18px;
-    text-align: center;
-}
-
-.artist-card:hover {
-    background-color: yellow;
-    color: red;
-}
-
-/* ARTIST PAGE */
-
-
-
-/* ERROR PAGE */
-
-.error {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    padding: 20px;
-    
-}
-
-.error h1 {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 72px;
-    text-align: center;
-}
-
-.error p {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 32px;
-    text-align: center;
-    color:red;
-    margin-bottom: 20px;
-}
-
-.error a {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 16px;
-    text-align: center;
-    border: 4px solid #000000;
-    padding: 10px;
-}
-
-.error a:hover {
-    background-color: yellow;
-    color: red;
 }
