--- a/frontend/templates/indexPage.html
+++ b/frontend/templates/indexPage.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groupie-tracker</title>
     <link rel="stylesheet" type="text/css" href="/static/style.css">
-
 </head>
 
 <body>
@@ -17,17 +16,20 @@
         <main class="container main-container">
             <div class="artists-list">
                 {{range . }}
-                <a href="/artist?id={{.ID}}">
+                <a class="artist-card" href="/artist?id={{.ID}}">
                     <img class="artist-image" src="{{ .Image}}" alt="">
                     <p class="artist-name">{{.Name }}</p>
                 </a>
                 {{end}}
             </div>
+            <div class="back-to-top">
+                <a class="back-to-top-link" href="#top">Go to Top</a>
+            </div>
         </main>
-        <footer>
+        <footer class="container footer-container">
             <div class="footer-links">
-                <a href="https://01.alem.school/git/skabidul">skabidul</a>
-                <a href="https://01.alem.school/git/abolat">abolat</a>
+                <a class="git-link" href="https://01.alem.school/git/skabidul" target="_blank">skabidul</a>
+                <a class="git-link" href="https://01.alem.school/git/abolat" target="_blank">abolat</a>
             </div>
         </footer>
     </div>
