--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -71,7 +71,7 @@ a {
 }
 
 .artist-image {
-    width: 200px;
+    width: 250px;
     border-bottom: solid black 4px;
 }
 
@@ -82,7 +82,7 @@ a {
 
 .back-to-top {
     text-align: center;
-    margin-bottom: 20px;
+    padding: 20px;
 }
 
 .back-to-top-link {
@@ -98,24 +98,6 @@ a {
 .footer-container {
     text-align: center;
     border-top: solid black 4px;
-    border-bottom: solid black 4px;
-}
-
-.footer-links {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.git-link {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 24px;
-}
-
-.git-link:hover {
-    color: red;
 }
 
 /* ARTIST PAGE */
@@ -135,19 +117,33 @@ a {
 }
 
 .cover {
-    width: 300px;
+    width: 400px;
     border: solid black 4px;
 }
 
 .name {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 32px;
+    font-size: 46px;
 }
 
 .other-info {
     display: flex;
     flex-wrap: wrap;
-    gap: 40px;
+    gap: 64px;
     justify-content: space-around;
     align-items: flex-start;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+.other-info div h2 {
+    color: red;
+    font-size: 48px;
+}
+
+.other-info div p {
+    font-size: 32px;
+}
+
+.other-info div ul li {
+    font-size: 24px;
 }
